--- a/MendiolaPalero_FinalsTP/app/src/main/res/values/strings.xml
+++ b/MendiolaPalero_FinalsTP/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Mendiola-Palero_FinalsTP</string>
+
+    <!--NUMBER 2-->
     <string-array name = "flavors">
         <item>Chocolate</item>
         <item>Vanilla</item>
